# essay-correction-harmony

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py  schemas.py  security.py  serializers.py
backend/app/analysis/: __init__.py  local_nlp.py  providers.py
backend/app/routes/: auth.py  classes.py  essays.py  examples.py  teacher.py
backend/scripts/: evaluate.py  prepare_dataset.py  prepare_grammar_dataset.py  train_grammar_detector.py  train_scorer.py
backend/tests/: test_api.py  test_provider.py
harmony/EssayCorrection/AppScope/: app.json5
harmony/EssayCorrection/AppScope/resources/base/element/: string.json
harmony/EssayCorrection/entry/src/main/ets/model/: ApiModels.ets
harmony/EssayCorrection/entry/src/main/ets/pages/: Index.ets
harmony/EssayCorrection/entry/src/main/ets/service/: ApiClient.ets
harmony/EssayCorrection/entry/src/main/resources/base/element/: string.json
