[project]
name = "essay-correction-backend"
version = "0.1.0"
description = "FastAPI backend for a Chinese essay correction Harmony app."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
ai = [
  "nltk>=3.9.0",
  "transformers>=4.44.0",
  "torch>=2.2.0"
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
